# continual-learning

./: .gitignore  pyproject.toml
docs/: coding-principles.md  idea.md
scripts/: test_mnist.py
src/continual_learning/: __init__.py  __main__.py  constants.py  environment.py  experiment.py  llm.py  network.py  neuron.py  protocol.py  state.py  types.py
tests/: test_experiment.py  test_llm.py  test_network.py  test_neuron.py
