[project]
name = "continual-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonio", email = "antonio@Antonios-MacBook-Air.local" }
]
requires-python = ">=3.13"
dependencies = ["litellm", "pydantic>=2"]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
